--- a/app/views/layouts/posts/index.html.erb
+++ b/app/views/layouts/posts/index.html.erb
@@ -1,3 +1,9 @@
-<h1>Posts Page</h1>
+<h1>All Posts for <%= @user.name %></h1>
 
-<p>Here is a list of posts for a given user</p>
+<ul>
+  <% @posts.each do |post| %>
+    <li>
+      <%= link_to post.title, user_post_path(@user, post) %>
+    </li>
+  <% end %>
+</ul>
