--- a/app/views/layouts/posts/show.html.erb
+++ b/app/views/layouts/posts/show.html.erb
@@ -1,3 +1,7 @@
-<h1>User post page</h2>
-
-<p>Details of a specific post of a user!</p>
+<h1><%= @post.title %></h1>
+<p>Post id: <%= @post.id %></p>
+<p>Text: <%= @post.text %></p>
+<p>Comments:<%= @post.comments_counter %></p>
+<p>Created at: <%= @post.created_at %></p>
+<p>Updated at: <%= @post.updated_at %></p>
+<p>Author id: <%= @post.author_id %></p>
