Fix all review comments

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="users-wrapper flex">
     <div class="img-container">
-      <%= image_tag @user.photo, :size => "70x80", alt: "user photo" %>
+      <%= image_tag 'image1.jpg', :size => "70x80", alt: "user photo" %>
     </div>
     <div class="user-details">
       <h2><%= @user.name %></h2>
